# django_microsoft_auth

./: .bandit.yml  .codeclimate.json  .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .pyup.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  dev-requirements-no-django.txt  dev-requirements.in  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  tox-requirements.txt  tox.ini
.bin/: format-code  lint-code  update-requirements
.bin/lib/: common.sh
.devcontainer/: Dockerfile  devcontainer.json  sxm-player.code-workspace
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
microsoft_auth/: __init__.py  _version.py  admin.py  apps.py  backends.py  checks.py  client.py  conf.py  context_processors.py  default_config.py  models.py  urls.py  utils.py  views.py
microsoft_auth/migrations/: 0001_initial.py  0002_fix_microsoft_id_length.py  0003_auto_20190305_1819.py  0003_microsoft_id_openid.py
microsoft_auth/static/microsoft/css/: admin_login.css
microsoft_auth/static/microsoft/js/: admin_login.js  login.js
microsoft_auth/templates/microsoft/: admin_login.html  auth_callback.html
reqs/: dev-requirements.txt  dev.in  dj2.2-requirements.txt  dj3.1-requirements.txt  dj3.2-requirements.txt  dj4.0-requirements.txt  dj4.1-requirements.txt  lint.in  ql.in  requirements-no-django.in  requirements.in  test.in
tests/: __init__.py  client_asertion_cert.pem  client_asertion_key.pem  settings.py  test_admin.py  test_apps.py  test_backends.py  test_client.py  test_conf.py  test_context_processors.py  test_django_microsoft_auth.py  test_models.py  test_utils.py  test_views.py  test_zconf.py  test_zconstance.py  urls.py
tests/site/: __main__.py  settings.py  urls.py  views.py
tests/site/templates/: base.html
tests/site/templates/registration/: login.html
tests/test_backends/: test_microsoft.py  test_xbox.py
